--- a/views/index.pug
+++ b/views/index.pug
@@ -8,5 +8,8 @@ head
     //- script(type='text/javascript', src="script.js") 
 
 body(class="container")
-    h1=title
-    p=message
+    h1 Todo
+    div(id="todoform")
+        include inputform.pug
+    div(id="todolist" hx-get="/todolist" hx-trigger="refetchtodo from:body")
+        include todolist.pug
