--- a/views/todolist.pug
+++ b/views/todolist.pug
@@ -2,5 +2,7 @@ for todo, idx in todos
   article(style="display: flex; gap: 1rem")
     div=`(${idx + 1})`
     div=`📰 ${todo.todoText}`
-    div(style="cursor: pointer" hx-post="/deletetodo" hx-vals=`{"id":"${todo.id}"}` hx-swap="none") 🗑️
+    form(action="/delete" method="POST")
+      input(type="hidden" value=`${todo.id}` name="id")
+      button(type="submit") 🗑️
     div 🖊️✍🏻
