--- a/views/components/inputForm.pug
+++ b/views/components/inputForm.pug
@@ -1,11 +1,13 @@
 //- Main form
-form(method="POST" action=`${mode==="ADD"? "/create" : "/update"}`)
-    input(type="text" name="todoText", value=curTodo.todoText)
-    button(type="submit")=`${mode==="ADD"? "Submit" : "Edit"}`
-    input(type="hidden" value=`${curTodo.id}` name="curId")
-//- Cancel button
-if mode==="EDIT"
-    form(method="GET" action="/")
-        button(type="submit") Cancel
+- var gridTemplateColumns = mode === "ADD" ? "4fr 1fr" : "4fr 1fr 1fr"
+div(class="grid" style=`grid-template-columns: ${gridTemplateColumns}; align-items: center`)
+    form(method="POST" action=`${mode==="ADD"? "/create" : "/update"}` style="display: contents")
+        input(type="text" name="todoText", value=curTodo.todoText)
+        button(type="submit")=`${mode==="ADD"? "Submit" : "Update"}`
+        input(type="hidden" value=`${curTodo.id}` name="curId")
+    //- Cancel button
+    if mode==="EDIT"
+        form(method="GET" action="/" style="display: contents")
+            button(type="submit") Cancel
 if message
     div(class="pico-color-red-400")=message
