--- a/views/components/inputForm.pug
+++ b/views/components/inputForm.pug
@@ -8,6 +8,6 @@ div(class="grid" style=`grid-template-columns: ${gridTemplateColumns}; align-ite
     //- Cancel button
     if mode==="EDIT"
         form(method="GET" action="/" style="display: contents")
-            button(type="submit") Cancel
+            button(type="submit" class="contrast") Cancel
 if message
     div(class="pico-color-red-400")=message
