--- a/views/components/todoList.pug
+++ b/views/components/todoList.pug
@@ -3,7 +3,7 @@ for todo, idx in todos
   - var fontClass = curTodo.id === todo.id ? "pico-color-blue-400" : ""
   article(class='grid' style="grid-template-columns: 0.5fr 4fr 1fr 1fr; align-items: center")
     div=`(${idx + 1})`
-    div(style=`font-weight: ${fontStyle}` class=`${fontClass}`)=`📰 ${todo.todoText}`
+    div(style=`font-weight: ${fontStyle}` class=`${fontClass}`)=`✍️ ${todo.todoText}`
     if mode === "ADD"
       form(action="/delete" method="POST" style="display: contents")
         input(type="hidden" value=`${todo.id}` name="curId")
