--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -1,6 +1,14 @@
-include ../components/header.pug
+doctype html
+html(lang='en')
+head
+    title Todo
+    link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css")
+    link(rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.colors.min.css")
+    //- Livereload
+    //- script(type='text/javascript' src="script.js") 
 body(class="container")
-    include ../components/title.pug
+    a(href="/")
+        h1 Todo
     div(id="todoform")
         include ../components/inputform.pug
     div(id="todolist")
