--- a/views/components/todoList.pug
+++ b/views/components/todoList.pug
@@ -10,4 +10,4 @@ for todo, idx in todos
         button(type="submit" class="contrast" style="margin-bottom: 0") 🗑️
       form(action="/edit" method="POST" style="display: contents")
         input(type="hidden" value=`${todo.id}` name="curId")
-        button(type="submit" class="contrast" style="margin-bottom: 0") 🖊️
+        button(type="submit" class="secondary" style="margin-bottom: 0") 🖊️
