--- a/views/components/todoList.pug
+++ b/views/components/todoList.pug
@@ -1,6 +1,9 @@
 for todo, idx in todos
-  article(style="display: flex; gap: 1rem")
+  - var fontWeight = curTodo.id === todo.id ? "700" : "400"
+  - var fontClass = curTodo.id === todo.id ? "pico-color-blue-400" : ""
+  article(class='grid' style="grid-template-columns: 0.5fr 4fr 1fr 1fr; align-items: center")
     div=`(${idx + 1})`
-    div=`📰 ${todo.todoText}`
-    div(style="cursor: pointer" hx-post="/deletetodo" hx-vals=`{"id":"${todo.id}"}` hx-swap="none") 🗑️
-    div 🖊️✍🏻
+    div(style=`font-weight: ${fontWeight}` class=`${fontClass}`)=`✍️ ${todo.todoText}`
+    if mode === "ADD"
+      div(style="cursor: pointer" hx-post="/delete" hx-vals=`{"curId":"${todo.id}"}` hx-target="#wrapperFormList") 🗑️
+      div(style="cursor: pointer" hx-post="/edit" hx-vals=`{"curId":"${todo.id}"}` hx-target="#wrapperFormList") 🖊️
