--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -13,4 +13,5 @@ body(class="container")
             h1 Todo
         div(id="wrapperFormList")
             include ../components/wrapperFormList.pug
-        div(id="spinner" class="lds-dual-ring htmx-indicator")
+        div(class="spinner-wrapper")
+            div(id="spinner" class="lds-dual-ring htmx-indicator" )
