--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -9,7 +9,7 @@ head
 body
     main(class="container")
         a(href="/")
-            h1 Todo
+            h1 Todo (MPA)
         div(id="todoform")
             include ../components/inputform.pug
         div(id="todolist")
