--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -10,7 +10,7 @@ head
 body(class="container")
     main(class="container")
         a(href="/")
-            h1 Todo
+            h1 Todo (HTMX)
         div(id="wrapperFormList")
             include ../components/wrapperFormList.pug
         div(class="spinner-wrapper")
