--- a/views/components/inputForm.pug
+++ b/views/components/inputForm.pug
@@ -1,7 +1,7 @@
 //- Main form
 - var gridTemplateColumns = mode === "ADD" ? "4fr 1fr" : "4fr 1fr 1fr"
 div(class="grid" style=`grid-template-columns: ${gridTemplateColumns}; align-items: start`)
-    form(hx-post=`${mode==="ADD"? "/create" : "/update"}` hx-target="#wrapperFormList" style="display: contents" hx-indicator="#spinner")
+    form(hx-post=`${mode==="ADD"? "/create" : "/update"}` hx-target="#wrapperFormList" style="display: contents" hx-indicator="#spinner" hx-disabled-elt="find input[type='text'], find button")
         input(type="text" name="todoText" value=curTodo.todoText)
         input(type="hidden" name="curId" value=curTodo.id)
         button(type="submit")=`${mode==="ADD"? "Submit" : "Update"}`
